1. pubspec.yaml: added new plugins 1.1. geolocator 2. Modified authentication.dart: added appUserData for save positioning data 3. Modified config.dart: added Units data 4. Added location helper: location_helpers.dart 5. Added models data CurrentWeatherData.dart 6. Added provider to get current weather data: get_current_weather_data.dart 7. Added use case to get current weather data: get_current_weather_data_api.dart 8. Added widget for sized spaces: horizontal and vertical: sized_spaces.dart 9. Modified demo_page.dart for test implemented functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,12 @@ dependencies:
   #  Custom adapters, Transformers, etc.
   dio: ^5.3.3
 
+  # A Flutter geolocation plugin which provides easy access to platform specific location services
+  # (FusedLocationProviderClient or if not available the LocationManager on
+  #  Android and CLLocationManager on iOS).
+  geolocator: ^10.1.0
+
+
 
 dev_dependencies:
   flutter_test:
