--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
 
   #  Being able to compare objects in Dart often involves having to override the == operator as well as hashCode.
   equatable: ^2.0.5
+  google_fonts: ^6.1.0
 
 
 dev_dependencies:
@@ -110,8 +111,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
